Decided to add the portfolio to my homepage.  Added it as another tab.  Updated some CSS to make everything cleaner and fixed the margins/padding between divs that made some white space.  Updated some other smaller things.  Going to work on adding some images from other projects now and some discriptions.  Also need to fix the buttons on the portfolio page.

--- a/Week 4/css/Styles.css
+++ b/Week 4/css/Styles.css
@@ -1,17 +1,157 @@
+p {
+  font-family: Georgia, "Times New Roman", Times, sherif;
+  font-size: 1em;
+}
+
+p#Fonts_Text, p#Number_Text {
+  font-weight: bold;
+}
+
 button {
-  background-color: white;
+  background-color: lightblue;
   border-radius: 8px;
   border:2px solid;
   font-size: 16px;
-  padding: 15px 22px 15px 22px;
+  padding: 8px 15px;
   color: Black;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #81838f;
+  background-color: #73081c;
   color: lightblue;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/*
+This is currently not in place anymore
+
+p#WIP {
+  font-family: Georgia, "Times New Roman";
+  font-size: 3em;
+  color: red;
+  font-weight: bold;
+  text-align: center;
+}
+
+p#WIPTXT {
+  font-family: Georgia, "Times New Roman";
+  font-size: 2em;
+  text-align: center;
+}*/
+
+h2 {
+  font-family: "Century Schoolbook", Georgia, Times, sherif;
+  font-size: 2em;
+  color: #0953e8;
+}
+
+li {
+  font-family: Georgia;
+  font-size: .8em;
+  color: darkgreen;
+}
+
+/*
+This is currently not in place anymore
+
+img.Construction {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
+  height: 500px;
+}
+*/
+
+a#IMG_SHOW_HIDE {
+  font-family: Georgia, "Times New Roman";
+  color: red;
+}
+
+div#Top {
+  background-color: #b4e7f0;
+  margin-top: -2px;
+  padding-bottom: 10px;
+}
+
+div#Interests_Classes {
+  background-color: #ffcf9c;
+  margin-top: -16px;
+  margin-bottom: 0;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+div#Contact {
+  background-color: #ff5e5e;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+div#navbar ul{
+  list-style-type: none;
+  text-align: left;
+}
+
+div#navbar li {
+  font-family: "Franklin Gothic Medium Cond", "Times New Roman";
+  font-size: 2.2em;
+  display: inline;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+label#FontChoice1L {
+  font-family: "Times New Roman";
+}
+
+label#FontChoice2L {
+  font-family: Georgia;
+  font-size:1.4em;
+}
+label#FontChoice3L {
+  font-family: "Century Schoolbook";
+}
+
+label {
+  font-size:1.3em;
+  Color: grey;
+}
+
+a#Recomended_Color {
+  Color: red;
+}
+
+select {
+  background: #bfbfbf;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+th#Fruit {
+  background-color: red;
+}
+
+th#Veg {
+  background-color: green;
+}
+
+td#Veg {
+  background-color: lightgreen;
+}
+
+td#Fruit {
+  background-color: lightpink;
+  padding-right: 1.1em;
+}
+
+table, td, th {
+  font-size: 2em;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 header {
@@ -20,6 +160,23 @@ header {
   font-weight: bold;
   text-align: center;
   background-color: #aec9f5;
+}
+
+div#navbar {
+  background-color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: -27px;
+  margin-top: -15px;
+}
+
+#Table_Page, #Animation_Page, #Styles_Page, #Portfolio_Page{
+  padding-top: 29px;
+  display: none;
+}
+
+#bird {
+  position: absolute;
 }
 
 #img {
@@ -32,10 +189,20 @@ header {
   background-color: #6b7fe3;
 }
 
+#Next, #Prev {
+  background-color: white;
+  border-radius: 8px;
+  border:2px solid;
+  font-size: 16px;
+  padding: 15px 22px 15px 22px;
+  color: Black;
+  cursor: pointer;
+}
+
 #Next {
   margin-left: 313px;
 }
 
 #Prev {
-  margin-left: 700px;
+  margin-left: 620px;
 }
